<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/icon_back_head"
        android:gravity="center">

        <com.github.siyamed.shapeimageview.CircularImageView
            android:id="@+id/user_head"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/icon" />

        <TextView
            android:id="@+id/user_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_head"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="big blue ocaen"
            android:textColor="@color/blue"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/user_motto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_nickname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/text_motto"
            android:textColor="@color/red_900"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/user_motto"
            android:layout_marginTop="10dp"
            android:background="#919191" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/luntan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/icon_luntan" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_vertical"
            android:text="@string/luntan"
            android:textColor="@color/black"
            android:textSize="17sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/list_divider" />

    <RelativeLayout
        android:id="@+id/bt_mycenter"
        style="@style/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/label_mycenter"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:src="@mipmap/touxian_icoon" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/list_divider" />

    <RelativeLayout
        android:id="@+id/bt_my_fav"
        style="@style/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/my_fav"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:src="@mipmap/icon_fav_24dp" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/list_divider" />

    <RelativeLayout
        android:id="@+id/bt_setting"
        style="@style/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:src="@mipmap/set" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/list_divider" />

    <RelativeLayout
        android:id="@+id/bt_exit"
        style="@style/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/exit_app"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:src="@mipmap/exit_icon" />

    </RelativeLayout>


</LinearLayout>