<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f1f1"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/r1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/gold">

        <ImageView
            android:id="@+id/rl_icon"
            android:layout_width="20dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:onClick="onCloseClick"
            android:padding="5dp"
            android:src="@mipmap/ic_back_u" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="设置"
            android:textColor="#333232"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@mipmap/launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/settings"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>


        <RelativeLayout
            android:id="@+id/bt_cache"
            style="@style/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/label_cache"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:src="@mipmap/icon_cache_24dp" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/list_divider" />

        <RelativeLayout
            android:id="@+id/bt_suggest"
            style="@style/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/label_suggest"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:src="@mipmap/icon_suggest_24dp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/list_divider" />

        <RelativeLayout
            android:id="@+id/bt_update"
            style="@style/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/label_update"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:src="@mipmap/icon_update_24dp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/list_divider" />

        <RelativeLayout
            android:id="@+id/bt_about"
            style="@style/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/label_about"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:src="@mipmap/icon_about_24dp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/list_divider" />

        <RelativeLayout
            android:id="@+id/bt_create_table"
            style="@style/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/creat_table"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:src="@mipmap/icon_create_table_24dp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/list_divider" />


    </LinearLayout>
</LinearLayout>